refactor(core): major cleanup across services and mappers